<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1e1d1d"
    android:orientation="vertical"
    tools:context=".BmiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/canvas"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/condition_image"
            android:padding="10dp"
            android:src="@drawable/ok" />

        <RelativeLayout
            android:id="@+id/contentlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardbackground"
            android:padding="20dp">

            <TextView
                android:id="@+id/bmidisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/BMI_txt"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genderdisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bmidisplay"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/gender"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bmicategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/genderdisplay"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/raleway"
                android:text="@string/your_bmi_category_is"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <android.widget.Button
            android:id="@+id/recalculatebmi"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/buttonbackground"
            android:text="@string/recalculate_your_bmi"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_horizontal|center_vertical"
        >

        <ImageView
            android:id="@+id/share"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonbackground"
            android:contentDescription="@string/share_btn"
            android:gravity="center"
            android:src="@drawable/share" />
    </LinearLayout>


</LinearLayout>